# labs

./: 1.py  combined.txt
1/: 1  1.c
2/: func.c  func.h  lab  lab.c  structures.h  valgrind.txt
2.2 (вектор)/: func.c  func.h  lab  lab.c  simulation.c  structures.h  valgrind.txt
2.2 (конечная)/: func.c  func.h  lab  lab.c  queue.c  simulation.c  simulation.h  structures.h  valgrind.txt
2.2 (список)/: func.c  func.h  lab  simulation.c  simulation.h  structures.h  valgrind.txt
3/: func.c  func.h  lab  lab.c  utils.h  valgrind.txt
3_cmake/: CMakeLists.txt  func.c  func.h  lab.c  structures.h  utils.c  utils.h
4/: abra.do  benchmark  benchmark.c  func.c  func.h  lab  lab.c  lab.py  res.csv  res_2.csv  structures.h  test_data.txt  utils.c  utils.h
5/: Makefile  algorithms.c  algorithms.h  combined.txt  file.txt  func.c  func.h  generate_file.py  graph.dot  heap.c  heap.h  lab  lab.c  structures.h  utils.c  utils.h
BDZ/: Makefile  func_hash.c  func_hash.h  func_tree.h  game  game.c  game.h  lab.c  output.txt  storage.h  storage_hash.c  storage_tree.c  structures.h  utils.c  utils.h
BDZ2/: Makefile  combined.txt  func_hash.c  func_hash.h  func_tree.c  game  game.c  hash.c  hash.h  script.py  storage.h  storage_hash.c  storage_tree.c  structures.h  utils.c  utils.h
Допуски/2/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  structures.h
Допуски/3/: erace_sum  erase_prosm  erase_prosm.c  erase_prosm_sp  erase_prosm_sp.c  erase_scep  erase_scep.c  erase_sum.c  insert_prosm  insert_prosm.c  insert_prosm_sp  insert_prosm_sp.c  insert_scep  insert_scep.c  valgrind.txt
(+8 files in other folders)
